test/inputs/expr/bad/unescaped-at-symbol.miros
My email is name @ example.com
